# Bspline

./: 1.bat  CMakeLists.txt  LSPIA.py  Makefile  README.md  data_generate.py  drawResult.m  drawResult.py  main.cpp  readWrite.cpp  readWrite.h
BSpline/: BSplineBase.cpp
Tests/: 01.txt  01.txt_controls.txt  01.txt_spline.txt  01_controls.txt  01_spline.txt  02.txt  02_controls.txt  02_spline.txt  03.txt  03_controls.txt  03_spline.txt
ann/lib/: shit.lib
ann/src/: 1.bat  shit.cpp
core/: BSpline.cpp  BSpline.h  BSplineBase.h  BandedMatrix.h  Spline_curve_fitting.cpp  Spline_curve_fitting.h  lez_fitting.cpp
plot/: plotGraph.cpp  plotGraph.h
